logs/ppt-time-referee.log
Listing '.'...
Listing './bin'...
Compiling './bin/vba_extract.py'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/PIL'...
Listing './lib/python3.5/site-packages/PIL/.libs'...
Listing './lib/python3.5/site-packages/Pillow-5.0.0.dist-info'...
Listing './lib/python3.5/site-packages/XlsxWriter-1.0.2.dist-info'...
Listing './lib/python3.5/site-packages/arrow'...
Listing './lib/python3.5/site-packages/arrow-0.12.0.egg-info'...
Listing './lib/python3.5/site-packages/click'...
Listing './lib/python3.5/site-packages/click-6.7.dist-info'...
Listing './lib/python3.5/site-packages/dateutil'...
Listing './lib/python3.5/site-packages/dateutil/tz'...
Listing './lib/python3.5/site-packages/dateutil/zoneinfo'...
Listing './lib/python3.5/site-packages/lxml'...
Listing './lib/python3.5/site-packages/lxml/html'...
Listing './lib/python3.5/site-packages/lxml/includes'...
Listing './lib/python3.5/site-packages/lxml/includes/libexslt'...
Listing './lib/python3.5/site-packages/lxml/includes/libxml'...
Listing './lib/python3.5/site-packages/lxml/includes/libxslt'...
Listing './lib/python3.5/site-packages/lxml/isoschematron'...
Listing './lib/python3.5/site-packages/lxml/isoschematron/resources'...
Listing './lib/python3.5/site-packages/lxml/isoschematron/resources/rng'...
Listing './lib/python3.5/site-packages/lxml/isoschematron/resources/xsl'...
Listing './lib/python3.5/site-packages/lxml/isoschematron/resources/xsl/iso-schematron-xslt1'...
Listing './lib/python3.5/site-packages/lxml-4.1.1.dist-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/ppt_time_referee-0.7.3.egg-info'...
Listing './lib/python3.5/site-packages/pptx'...
Listing './lib/python3.5/site-packages/pptx/chart'...
Listing './lib/python3.5/site-packages/pptx/compat'...
Listing './lib/python3.5/site-packages/pptx/dml'...
Listing './lib/python3.5/site-packages/pptx/enum'...
Listing './lib/python3.5/site-packages/pptx/opc'...
Listing './lib/python3.5/site-packages/pptx/oxml'...
Listing './lib/python3.5/site-packages/pptx/oxml/chart'...
Listing './lib/python3.5/site-packages/pptx/oxml/dml'...
Listing './lib/python3.5/site-packages/pptx/oxml/shapes'...
Listing './lib/python3.5/site-packages/pptx/parts'...
Listing './lib/python3.5/site-packages/pptx/shapes'...
Listing './lib/python3.5/site-packages/pptx/templates'...
Listing './lib/python3.5/site-packages/pptx/text'...
Listing './lib/python3.5/site-packages/python_dateutil-2.6.1.dist-info'...
Listing './lib/python3.5/site-packages/python_pptx-0.6.7.egg-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/six-1.11.0.dist-info'...
Listing './lib/python3.5/site-packages/time_referee'...
Compiling './lib/python3.5/site-packages/time_referee/__init__.py'...
***   File "./lib/python3.5/site-packages/time_referee/__init__.py", line 56
    print "Saving . . ."
                       ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/xlsxwriter'...
Listing './share'...
Listing './share/python-wheels'...
